--- a/deployment.yml
+++ b/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: my-app
-          image: sevenajay/youtube:latest
+          image: kunalbarot3188/youtube-clone-app:v1
           ports:
             - containerPort: 3000  # Your Node.js application should listen on port 3000
 
